a number of style updates

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -154,28 +154,28 @@ th {
     font-size: 0.9rem;
 }
 
-#resultData {
+#resultContainer {
     width: 100%;
     overflow-x: scroll;
     scrollbar-gutter: stable both-edges;
 }
 
-#resultData::-webkit-scrollbar {
+#resultContainer::-webkit-scrollbar {
     height: 10px;
     -webkit-appearance: none;
 }
 
-#resultData::-webkit-scrollbar-track {
+#resultContainer::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 
-#resultData::-webkit-scrollbar-thumb {
+#resultContainer::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 5px;
 }
 
-#resultData::before,
-#resultData::after {
+#resultContainer::before,
+#resultContainer::after {
     content: '';
     display: block;
     height: 10px;
