updating authentication button logic

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -136,7 +136,7 @@ th {
 }
 
 /* Submit Button */
-.submit-button {
+.submit-button, button {
     background-color: #0d6efd;
     color: white;
     border: none;
