--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -213,9 +213,16 @@ th {
     z-index: 1;
 }
 
-/* Loading Message */
+/* Messages */
 .loading-message {
     padding: 1rem;
     color: #666;
     font-style: italic;
+}
+
+.error-message {
+    padding: 1rem;
+    color: hsl(0, 100%, 25%);
+    font-style: italic;
+    font-weight: bold;
 }
