--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -146,6 +146,7 @@ button,
     max-width: 200px;
     height: 38px;
     padding: 0.375rem 0.75rem;
+    margin: 0 1rem;
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0.25rem;
