--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -168,6 +168,195 @@ button:hover,
     align-items: center;
 }
 
+/* Tab Navigation */
+.tabs {
+    position: relative;
+    text-align: left;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    min-height: 38px;
+    margin: 0;
+    padding: 0 16px;
+}
+
+.tabs.dropdown-mode {
+    overflow: visible;
+    white-space: normal;
+    padding-left: 40px;  /* Make room for hamburger */
+}
+
+.tabs.dropdown-mode.menu-open {
+    height: 38px;
+}
+
+.tabs.dropdown-mode .hamburger-menu {
+    display: block;
+}
+
+.tabs.dropdown-mode .tab-button {
+    display: none;
+    width: 50%;
+}
+
+.tabs.dropdown-mode .tab-button.active {
+    display: inline-block;
+    
+}
+
+.tabs.dropdown-mode.menu-open .tab-button {
+    display: block;
+    margin: 0;
+    border: 1px solid rgba(5, 0, 50, 0.2);
+    border-radius: 0;
+}
+
+.tabs.dropdown-mode.menu-open .tab-button.active {
+    background-color: #0d6efd;
+    color: white;
+}
+
+.tabs.dropdown-mode.menu-open .tab-button:has(span) {
+    padding-left: 25px;  /* Center content while making room for close button */
+}
+
+.tabs.dropdown-mode.menu-open .new-tab-button {
+    display: block;
+    width: 50%;
+    margin: 0;
+    border: 1px solid rgba(5, 0, 50, 0.2);
+    box-shadow: inset 0 -8px 16px -16px rgba(5, 0, 50, 0.6);
+    border-radius: 0 0 3px 3px;
+    max-width: none;
+}
+
+.tab-button {
+    display: inline-block;
+    margin: 0 2px;
+    position: relative;
+    top: 1px;
+    cursor: pointer;
+    border: 1px solid rgba(5, 0, 50, 0.2);
+    border-bottom: none;
+    background-color: #f1f1f1;
+    color: #333;
+    max-width: none;
+    height: auto;
+    border-radius: 0;
+    border-radius: 0.25rem 0.25rem 0 0;
+    box-shadow: inset 0 -8px 16px -16px rgba(5, 0, 50, 0.6);
+}
+
+.tab-button.active {
+    background-color: #ffffff;
+    color: #333;
+    box-shadow: -3px -3px 6px -6px rgba(5, 0, 50, 0.6);
+}
+
+.tab-button:hover {
+    background-color: #fff;
+}
+
+.tab-container {
+    padding: 20px 0 0 0;
+    flex: 1;
+    width: 100%;
+    min-height: 100px;
+    box-shadow: 0 -12px 14px -18px rgba(5, 0, 50, 0.7);
+}
+
+.tab-content {
+    display: none;
+    padding: none;
+}
+
+.tab-content.active {
+    display: block;
+}
+
+.tab-button:has(span) {
+    position: relative;
+    padding-right: 25px;  /* Make room for close button */
+}
+
+.tab-close {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
+    line-height: 18px;
+    text-align: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+
+.tab-close:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #fff;
+}
+
+.new-tab-button {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid rgba(5, 0, 50, 0.2);
+    background-color: #f1f1f1;
+    color: #666;
+    font-size: 18px;
+    line-height: 20px;
+    padding: 0;
+    margin-left: 8px;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: -1px 1px 6px -2px rgba(5, 0, 50, 0.6);
+}
+
+.new-tab-button:hover {
+    background-color: #fff;
+    color: #333;
+}
+
+/* Hamburger Menu */
+.hamburger-menu {
+    box-sizing: border-box;
+    display: none;
+    width: 28px;
+    height: 28px;
+    padding: 0;
+    border-radius: 3px;
+    border: 1px solid rgba(5, 0, 50, 0.2);
+    background-color: #f1f1f1;
+    cursor: pointer;
+    position: absolute;
+    left: 8px;
+    top: 4px;
+    /*transform: translateY(-50%);*/
+    box-shadow: -1px 1px 6px -2px rgba(5, 0, 50, 0.6);
+}
+
+.hamburger-menu:hover {
+    background-color: #fff;
+}
+
+.hamburger-menu span {
+    display: block;
+    width: 14px;
+    height: 2px;
+    background-color: #666;
+    margin: 2px auto;
+    transition: background-color 0.15s ease-in-out;
+}
+
+.hamburger-menu:hover span {
+    background-color: #333;
+}
+
 /* Result Containers */
 #resultMessage {
     margin: 1rem 0;
@@ -227,4 +416,17 @@ th {
     padding: 1rem;
     color: hsl(0, 100%, 35%);
     font-style: italic;
+}
+
+@media (max-width: 600px) {
+    .tabs.dropdown-mode .tab-button,
+    .tabs.dropdown-mode .tab-button.active,
+    .tabs.dropdown-mode.menu-open .tab-button,
+    .tabs.dropdown-mode.menu-open .new-tab-button{
+        width: calc(100% - 1rem); /* Adjust width for smaller screens */
+    }
+
+    .tabs.dropdown-mode .new-tab-button{
+        display: none;
+    }
 }
