--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -168,6 +168,66 @@ button:hover,
     align-items: center;
 }
 
+/* Modal dialogs */
+.modal {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background: linear-gradient(to bottom, #156accaa, #2baaff);
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    padding: 20px;
+}
+
+.modal-content:has(.modal-header) {
+    padding-top: 0px;
+}
+.modal-header {
+    display: flex;
+    flex-direction: row;
+    /*border-bottom: 1px solid #dee2e6;*/
+    margin-bottom: 5px;
+    justify-content: space-between;
+    padding: 5px 0;
+}
+.modal-close {
+    transform: translateX(80%);
+    width: 16px;
+    height: 16px;
+    line-height: 18px;
+    text-align: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.modal-close:only-child {
+    margin-left:auto;
+}
+
+.modal-close:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #fff;
+}
+.modal-body {
+    margin: 20px 0;
+}
+
+
+
+
 /* Tab Navigation */
 .tabs {
     position: relative;
