--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -316,13 +316,13 @@ button:hover,
 }
 
 .tab-button.active {
-    background-color: #ffffff;
+    background-color: white;
     color: #333;
     box-shadow: -3px -3px 6px -6px rgba(5, 0, 50, 0.6);
 }
 
 .tab-button:hover {
-    background-color: #fff;
+    background-color: white;
 }
 
 .tab-container {
@@ -442,12 +442,13 @@ button:hover,
 }
 
 /* Table Wrapper */
-.table-wrapper {
+.table-wrapper .tab-content{
     width: 100%;
     overflow-x: auto;
     margin-top: 1rem;
     border-radius: 0.25rem;
-    box-shadow: 0 0 0 1px #dee2e6;
+    /*box-shadow: 0 0 0 1px #dee2e6;*/
+    box-shadow: inset 2px 2px 12px 0px rgba(5, 0, 50, 0.1);
 }
 
 /* Table Styling */
@@ -457,8 +458,8 @@ table {
     margin: 0; /* Remove table margins since wrapper handles spacing */
     white-space: nowrap;
     background-color:white;
-    box-shadow: inset 2px 2px 12px 0px rgba(5, 0, 50, 0.1);
-    border-radius: 5px;
+    /*box-shadow: inset 2px 2px 12px 0px rgba(5, 0, 50, 0.1);
+    border-radius: 5px;*/
     overflow: hidden;
 }
 
