--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -465,10 +465,10 @@ table {
 }
 
 th, td {
-    padding: 0.75rem;
+    padding: 0.5rem;
     border: 1px solid #dee2e6;
     text-align: left;
-    min-width: 100px; /* Ensure minimal column width */
+    /*min-width: 100px; /* Ensure minimal column width */
 }
 
 th {
