--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -513,6 +513,31 @@ th {
 }
 
 /* Draggable Table Rows */
+.row-drag-handle {
+    width: 20px;
+    cursor: grab;
+    position: relative;
+    padding: 0 !important;
+    background-color: #f8f8f8;
+}
+
+.row-drag-handle::before {
+    content: "⋮⋮";
+    display: block;
+    text-align: center;
+    color: #666;
+    font-size: 12px;
+    line-height: 100%;
+}
+
+.row-drag-handle:hover {
+    background-color: #eee;
+}
+
+tr.dragging .row-drag-handle {
+    cursor: grabbing;
+}
+
 tr.draggable {
     cursor: grab;
     user-select: none;
