--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -469,7 +469,7 @@ table {
 
 .row-clone {
     cursor: grabbing !important;
-    pointer-events: none;
+    /*pointer-events: none;*/
     opacity: 0.95;
     background: white;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -478,13 +478,14 @@ table {
     overflow: hidden;
 }
 .row-clone .row-drag-handle {
-    background-color: #eee;
-    color: #333;
+    background-color: #bbb;
+    color: #000;
+    max-height: 100%;
 }
 
 tr.draggable {
     user-select: none;
-    transition: transform 0.1s, box-shadow 0.1s;
+    transition: transform 0.05s, box-shadow 0.1s;
 }
 
 tr.dragging {
