--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -488,7 +488,7 @@ table {
     background: white;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-    max-height: 100px;
+    /*max-height: 100px;*/
     overflow: hidden;
 }
 .row-clone .row-drag-handle {
@@ -499,7 +499,7 @@ table {
 
 tr.draggable {
     user-select: none;
-    transition: transform 0.1s, box-shadow 0.1s;
+    transition: transform 0.1s, box-shadow 0.1s, max-height 0.2s ease-in-out, top 0.2s ease-in-out;
 }
 
 tr.dragging {
