--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -89,7 +89,7 @@ nav a:hover {
 .button-container {
     flex: 1 1 100%;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     gap: 1rem;
 }
 
@@ -102,6 +102,7 @@ button,
     border: none;
     cursor: pointer;
     max-width: 200px;
+    min-width: 100px;
     height: 38px;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
@@ -254,6 +255,7 @@ button:hover,
     box-shadow: inset 0 -8px 16px -16px rgba(5, 0, 50, 0.6);
     border-radius: 0 0 3px 3px;
     max-width: none;
+    min-width: none;
 }
 
 .tab-button {
