modal content opaque

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -142,7 +142,7 @@ button:hover,
     overflow: auto;
 }
 .modal-content {
-    background-color: #fefefeaa;
+    background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     border: 1px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */
