--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -281,6 +281,7 @@ button:hover,
 
 .tab-container {
     padding: 20px 0 0 0;
+    text-align:left;
     overflow-x:auto;
     flex: 1;
     width: 100%;
@@ -597,7 +598,7 @@ tr.dragging::after {
     bottom: 1px;
 }
 
-table button.save-button:disabled {
+button.save-button:disabled {
     display: none;
 }
 
