--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -483,6 +483,23 @@ table {
     overflow: hidden;
 }
 
+.new-row-button {
+    min-width: 0;
+    cursor: pointer;
+    position: relative;
+    padding: 0 !important;
+    background-color: #f8f8f8;
+}
+
+.new-row-button::before {
+    content: "+";
+    display: block;
+    text-align: center;
+    color: #666;
+    font-size: 20px;
+    line-height: 100%;
+}
+
 .row-drag-handle {
     min-width: 0;
     width: 20px;
@@ -491,6 +508,13 @@ table {
     position: relative;
     padding: 0 !important;
     background-color: #f8f8f8;
+}
+
+.td.spacer-cell {
+    padding: 0px;
+    min-width: 0px;
+    border: none;
+    background-color: transparent;
 }
 
 .row-drag-handle::before {
@@ -502,7 +526,7 @@ table {
     line-height: 100%;
 }
 
-.row-drag-handle:hover {
+.row-drag-handle:hover, .new-row-button:hover {
     background-color: #eee;
 }
 
