--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -489,6 +489,7 @@ table {
     position: relative;
     padding: 0 !important;
     background-color: #f8f8f8;
+    transition: background-color 0.15s ease-in-out;
 }
 
 .new-row-button::before {
@@ -506,23 +507,31 @@ table {
     cursor: pointer;
     position: relative;
     padding: 0 !important;
-    background-color: #f8f8f8;
+    background-color: #ff9292;
     border: none;
     outline: none;
 }
 :has(.dragging) .new-row-button::before {
-    content: "✕";
+    content: "×";
     display: block;
     text-align: center;
-    color: #c51f2f;
+    color: white;
     font-size: 20px;
     line-height: 100%;
     transition: color 0.15s;
 }
-:has(.dragging) .new-row-button:hover {
-    background-color: #ffeaea;
+tr.dragging ~ tr td.new-row-button {
+    display:none;
 }
-
+/* row is being deleted */
+tfoot tr.dragging::after {
+    content: "remove this row";
+    position: absolute;
+    inset: 0;
+    background: #bb121277;
+    pointer-events: none;
+    z-index: 2;
+}
 
 .row-drag-handle {
     min-width: 0;
@@ -580,6 +589,7 @@ tr.dragging {
 }
 tr.dragging::after {
     content: "";
+    color: white;
     position: absolute;
     inset: 0;
     background: rgba(51, 51, 51, 0.3);
