--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -523,6 +523,9 @@ table {
 tr.dragging ~ tr td.new-row-button {
     display:none;
 }
+:has(.dragging) .new-row-button:hover {
+    background-color: #ff9292;
+}
 /* row is being deleted */
 tfoot tr.dragging::after {
     content: "remove this row";
@@ -531,6 +534,9 @@ tfoot tr.dragging::after {
     background: #bb121277;
     pointer-events: none;
     z-index: 2;
+    text-align: center;
+    font-size: 20px;
+    line-height: 100%;
 }
 
 .row-drag-handle {
