fix spacer styling

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -549,7 +549,7 @@ tfoot tr.dragging::after {
     background-color: #f8f8f8;
 }
 
-td.spacer-cell {
+td.spacer-cell, th.spacer-cell {
     padding: 0px;
     min-width: 0px;
     border: none;
