--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -542,16 +542,18 @@ table:has(.dragging) tfoot .new-row-button:hover {
     background-color: #ff9292;
 }
 /* row is being deleted */
-tfoot tr.dragging::after {
-    content: "remove this row";
+tfoot tr.draggable::after {
+    content: "deleting this row";
     position: absolute;
+    top: 0;
+    bottom: 0;
     inset: 0;
     background: #bb121277;
     pointer-events: none;
     z-index: 2;
     text-align: center;
     font-size: 20px;
-    line-height: 100%;
+    text-shadow: 0 0 8px black;
 }
 
 .row-drag-handle {
